tests/fixtures/fail/no-class.ts
// Violates: no-class
export class UserService {
    readonly name: string
    constructor(name: string) {
        this.name = name
    }
}
